@@ -51,6 +51,7 @@ PKG_CHECK_MODULES(PHONEMGR, gtk+-2.0 >= 2.10 glib-2.0
 	gstreamer-0.10 gdk-pixbuf-2.0 gconf-2.0
 	$GNOME_BLUETOOTH_REQS libglade-2.0 $evo_pc_file
 	gmodule-2.0 dbus-glib-1 gnome-icon-theme >= 2.19.1
+	gtkspell-2.0
 )
 
 DBUSLIBDIR="`$PKG_CONFIG dbus-glib-1 --variable=libdir`"
